<resources>
    <string name="app_name">MyMinesweeper</string>

    <string name="version_num">v 1.0.0</string>
    <string name="tv_new_game">New Game</string>
    <string name="tv_settings">Settings</string>
    <string name="tv_stats">Statistics</string>
    <string name="tv_quit_app">Quit</string>

    <string name="tv_choose_mode">Choose Game Mode</string>
    <string name="tv_mode_beginner">Beginner</string>
    <string name="tv_mode_advanced">Advanced</string>
    <string name="tv_mode_expert">Expert</string>
    <string name="tv_mode_custom">Custom</string>
    <string name="tv_beck_to_main">Main Menu</string>

    <string name="et_hint_rows">Number of rows</string>
    <string name="et_hint_cols">Number of columns</string>
    <string name="et_hint_bombs">Number of bombs</string>
    
    <string name="btn_dialog_cancel">Cancel</string>
    <string name="btn_dialog_ok">Okay</string>
    <string name="dialog_custom_title">Choose game parameters</string>
</resources>
